--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
         <module>V2</module>
         <module>V3</module>
         <module>V4</module>
+        <module>V5</module>
+        <module>V6</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
