--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>V8</module>
         <module>V9</module>
         <module>V10</module>
+        <module>V11</module>
+        <module>V12</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
