--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>V10</module>
         <module>V11</module>
         <module>V12</module>
+        <module>V13</module>
+        <module>V14</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
@@ -30,6 +32,12 @@
     <groupId>org.example</groupId>
     <artifactId>WebServer</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
