--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>V12</module>
         <module>V13</module>
         <module>V14</module>
+        <module>V15</module>
+        <module>V16</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
