--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
         <module>V14</module>
         <module>V15</module>
         <module>V16</module>
+        <module>V17</module>
+        <module>V18</module>
+        <module>V19</module>
     </modules>
     <properties>
         <!-- 设置 JDK 版本为 1.8 -->
@@ -39,6 +42,11 @@
             <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
             <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.11.RELEASE</version>
         </dependency>
     </dependencies>
 
